[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Background/BG_Base.png" type="Texture" id=1]
[ext_resource path="res://Assets/Background/BG_Stars.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Title_Defender.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Title.gd" type="Script" id=4]
[ext_resource path="res://Assets/UI/Text_Start.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Saxophone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Drum.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Violin.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Bass.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Trombone.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/UI/Button_Base.png" type="Texture" id=11]
[ext_resource path="res://Assets/UI/Button_Pressed.png" type="Texture" id=12]
[ext_resource path="res://Scenes/Clarinet.tscn" type="PackedScene" id=13]
[ext_resource path="res://Assets/Font/TitanOne-Regular.ttf" type="DynamicFontData" id=14]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 14 )

[node name="Title" type="Node"]
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 1024, 1024 )
texture = ExtResource( 1 )

[node name="Stars" type="Sprite" parent="."]
position = Vector2( 1024, 1024 )
texture = ExtResource( 2 )

[node name="Clarinet" parent="." instance=ExtResource( 13 )]
position = Vector2( 628.579, 287.35 )

[node name="Trombone" parent="." instance=ExtResource( 10 )]
position = Vector2( 287.35, 1021.44 )

[node name="Saxophone" parent="." instance=ExtResource( 6 )]
position = Vector2( 1526.55, 303.064 )

[node name="Violin" parent="." instance=ExtResource( 8 )]
position = Vector2( 682.457, 1706.14 )

[node name="Bass" parent="." instance=ExtResource( 9 )]
position = Vector2( 1589.41, 1625.32 )

[node name="Drum" parent="." instance=ExtResource( 7 )]
position = Vector2( 1775.73, 882.255 )

[node name="StartButton" type="TextureButton" parent="."]
margin_left = 687.3
margin_top = 1179.24
margin_right = 1312.3
margin_bottom = 1448.24
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="StartButton"]
position = Vector2( 317.799, 136.071 )
scale = Vector2( 0.712018, 0.712018 )
texture = ExtResource( 5 )

[node name="Title" type="Sprite" parent="."]
position = Vector2( 994.36, 671.666 )
texture = ExtResource( 3 )

[node name="Instructions" type="Label" parent="."]
margin_left = 508.759
margin_top = 936.698
margin_right = 1533.76
margin_bottom = 1110.7
custom_fonts/font = SubResource( 1 )
text = "Shoot the asteroids, protect the planet!
       1. Click an instrument to select it
       2. Click elsewhere to shoot notes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="."]
margin_left = 1873.51
margin_top = 1973.43
margin_right = 2026.51
margin_bottom = 2029.43
custom_fonts/font = SubResource( 1 )
text = "v0.1.0"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="input_event" from="Clarinet" to="." method="_on_Clarinet_input_event"]
[connection signal="input_event" from="Trombone" to="." method="_on_Trombone_input_event"]
[connection signal="input_event" from="Saxophone" to="." method="_on_Saxophone_input_event"]
[connection signal="input_event" from="Violin" to="." method="_on_Violin_input_event"]
[connection signal="input_event" from="Bass" to="." method="_on_Bass_input_event"]
[connection signal="input_event" from="Drum" to="." method="_on_Drum_input_event"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
